--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -4,5 +4,6 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+RUN mkdir -p dist/proto && cp -R src/proto/* dist/proto/
 EXPOSE 3001
 CMD ["node", "dist/main.js"]
