--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,14 @@ services:
       - minio
     environment:
       JWT_SECRET: very-very-strong-secret
+  
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - "4000:4000"  # локально доступно по http://localhost:4000 (внутри контейнера)
+    depends_on:
+      - api-gateway
 
 volumes:
   postgres-data:
