--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,14 @@
 FROM node:22-alpine
 WORKDIR /usr/src/app
+
 COPY package*.json ./
+
 RUN npm install
+
 COPY . .
+
 RUN npm run build
-RUN mkdir -p dist/proto && cp -R src/proto/* dist/proto/
-EXPOSE 3000
-CMD ["node", "dist/main.js"]
+
+EXPOSE 4000
+
+CMD ["npm", "run", "preview"]
